# whs_ppr_praktikum

./: .gitignore  CMakeLists.txt  README.md  ppr_praktikum.cfg
binaerbaeume/: btree.c  btree.h  btreenode.c  btreenode.h  main.c
commandarguments/: main.c
grundelemente/: main.c
klausur/: main.c
praktikum1/: main.c
praktikum2/: main.c
praktikum3/: main.c
struktur/: main.c
zeiger/: main.c
